<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.dashboard.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_welcome_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/welcome_user_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2"
            android:textSize="14sp"
            android:textColor="@color/muted_foreground"
            android:text="@string/welcome_user_subtitle" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardLastActivity"
            style="@style/Widget.Volt_Project.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/last_activity"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/tvActivityTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/muted_foreground"
                        android:text="@string/activity_time" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/distance"
                            android:src="@drawable/ic_running"
                            app:tint="@color/primary" />

                        <TextView
                            android:id="@+id/tvDistanceValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:text="@string/distance_value" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textSize="12sp"
                            android:textColor="@color/muted_foreground"
                            android:text="@string/distance" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/duration"
                            android:src="@drawable/ic_timer"
                            app:tint="@color/primary" />

                        <TextView
                            android:id="@+id/tvDurationValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:text="@string/duration_value" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textSize="12sp"
                            android:textColor="@color/muted_foreground"
                            android:text="@string/duration" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/calories"
                            android:src="@drawable/ic_fire"
                            app:tint="@color/primary" />

                        <TextView
                            android:id="@+id/tvCaloriesValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:text="@string/calories_value" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textSize="12sp"
                            android:textColor="@color/muted_foreground"
                            android:text="@string/calories" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/weekly_progress" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_steps"
                    style="@style/Widget.Volt_Project.Card"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="24dp">

                        <TextView
                            android:id="@+id/tv_steps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:text="@string/steps_value" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/space_2"
                            android:textSize="14sp"
                            android:textColor="@color/muted_foreground"
                            android:text="@string/steps" />
                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_kilometers"
                    style="@style/Widget.Volt_Project.Card"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="24dp">

                        <TextView
                            android:id="@+id/tv_kilometers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:text="@string/kilometers_value" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/space_2"
                            android:textSize="14sp"
                            android:textColor="@color/muted_foreground"
                            android:text="@string/kilometers" />
                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/onu_recommendation" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_steps_goal"
            style="@style/Widget.Volt_Project.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <ProgressBar
                    android:id="@+id/progress_steps"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="14dp"
                    android:max="59500"
                    android:progress="50349"
                    android:progressDrawable="@drawable/progress_bar_rounded" />

                <TextView
                    android:id="@+id/tv_steps_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_2"
                    android:layout_gravity="end"
                    android:textSize="14sp"
                    android:textColor="@color/muted_foreground"
                    android:text="@string/steps_goal" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_time_goal"
            style="@style/Widget.Volt_Project.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <ProgressBar
                    android:id="@+id/progressTime"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="14dp"
                    android:max="150"
                    android:progress="150"
                    android:progressDrawable="@drawable/progress_bar_rounded" />

                <TextView
                    android:id="@+id/tvTimeGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_2"
                    android:layout_gravity="end"
                    android:textSize="14sp"
                    android:textColor="@color/muted_foreground"
                    android:text="@string/time_goal" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>
